--- a/404.html
+++ b/404.html
@@ -1,3 +1,3 @@
 <script>
-  window.location.replace("/modeva" + window.location.pathname);
+  window.location.replace("/Modeva" + window.location.pathname);
 </script>
