--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     />
 
     <!-- Fixed Material Icons import -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icons=search,percent_discount,person,shopping_cart,thumb_up,call,rocket_launch,assured_workload, arrow_menu_close"
